# Changelog
All notable changes to this project will be documented in this file.

## [2.9.0] - 2020-07-17
### Removed
- IE support.

## [2.7.0] - 2020-07-17
### Added
- Pictures to all pages.
- Default color stylesheets to all pages.

## [2.6.0] - 2020-07-17
### Changed
- Slick slider on index pages now works fine.
- Fix load fonts and images.

## [2.5.0] - 2020-07-16
### Added
- jQuery plugins.

### Changed
- Moving slick font to slick's folder.

### Removed
- Unused scripts import in html files.

## [2.4.0] - 2020-07-16
### Changed
- Fix favicon.
- Page layout is now correspond to Boostrap 4.
- Loading images on the pages using Webpack.
- Finally fix favicon displaying.

## [2.3.0] - 2020-07-16
### Added
- Targeting styles depending on the target pages.
- Color stylesheets.

## [2.2.0] - 2020-07-16
### Changed
- Reformatting by splitting scss files.

### Removed
- Old unused scss files.

## [2.1.0] - 2020-07-16
### Added
- humans.txt.

### Changed
- Fixing favicon.
- Continuing migration from Bootstrap 3 to Bootstrap 4.
- Reformating scss files.
- New loader in webpack config.

## [2.0.0] - 2020-07-16
### Changed
- Starting migration from Grunt to Webpack.
- Files stucture.
- Starting migration from Bootstrap 3 to Bootstrap 4.
- New jQuery version.
- New normalize.css version.
- New .gitignore.