@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>News</title>
+  <title>About</title>
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <base href="" />
