@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <title>Main</title>
+  <title>Government</title>
   <meta content="" name="description"/>
   <meta content="" name="keywords"/>
   <base href=""/>
