@@ -1,11 +1,15 @@
-import * as $ from 'jquery'
-
+// Load stylesheets
 import '@css/_custom.scss'
 import '@css/color/raspberry-color.min.css'
 import '@js/jquery/plugins/slick/slick.scss'
 
+// Load images
+import '@js/image'
+
+// Load Bootstrap
 import 'bootstrap'
 
+// Load jQuery plugins
 import 'script-loader!./jquery/plugins/Chart';
 import '@js/jquery/plugins/bootstrap-select.js'
 import '@js/jquery/plugins/slick/slick.js'
@@ -15,30 +19,6 @@ import '@js/jquery/plugins/jquery.sharrre.min.js'
 import '@js/jquery/plugins/jquery.parallax.min.js'
 import '@js/jquery/plugins/jquery.form.js'
 import '@js/jquery/plugins/validation/jquery.validate.js'
-import '@js/app/lib/site.js'
-import '@js/app/lib/siteMode.js'
-import '@js/app/mode/themeMode.js'
-import '@js/app/modules/mainSlider.js'
-import '@js/app/modules/menuAligns.js'
-import '@js/app/modules/bgStretch.js'
-import '@js/app/modules/eventAnimate.js'
-import '@js/app/modules/stuffSlider.js'
-import '@js/app/modules/gridsDiagramms.js'
-import '@js/app/modules/barChart.js'
-import '@js/app/modules/disquis.js'
-import '@js/app/modules/stickyHeader.js'
-import '@js/app/modules/globalScripts.js'
-import '@js/app/modules/parallax.js'
-import '@js/app/modules/backgroundImg.js'
-import '@js/app/modules/scrollPlugin.js'
-import '@js/app/modules/googleMap.js'
-import '@js/app/modules/eventSlider.js'
-import '@js/app/modules/stuffPage.js'
-import '@js/app/modules/aboutDiagramms.js'
-import '@js/app/modules/sharrre.js'
-import '@js/app/modules/dtMenu.js'
-import '@js/app/modules/formSubscribe.js'
-import '@js/app/modules/formFieldsSubscribe.js'
-import '@js/init.js'
 
-import '@js/image'
+// Load custom scripts
+import '@js/app/init'
