@@ -1,9 +1,0 @@
-import {appMakeBeCool} from "@js/app/lib/site";
-
-$(function(){
-    // if(global.cultureKey != 'en') {
-    //     downloadJSAtOnload(designUrl+'js/jquery/plugins/validation/localization/messages_'+global.cultureKey+'.js');
-    // }
-    "use strict";
-    appMakeBeCool.gateway.init();
-});
